2008-05-12  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c
	(clearlooks_draw_list_view_header):
	* engines/clearlooks/src/clearlooks_style.c
	(clearlooks_style_draw_shadow):
	Old looking scrolled window.

2008-05-11  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c
	(clearlooks_draw_scale_trough),
	(clearlooks_draw_progressbar_trough),
	(clearlooks_draw_progressbar_fill):
	First implementation of the old scrollbar, 
	it is breaking Inverted and maybe Glossy (maybe Gummy? :) )

2008-05-11  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	(clearlooks_glossy_draw_button):
	Fix button inset.

2008-05-11  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	(clearlooks_glossy_draw_checkbox):
	The inset was broken (ie. invisible).

2008-05-11  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c
	(clearlooks_draw_button):
	Fixes the right shadow.

2008-05-11  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_button):
	Remove bogus debug code.

2008-05-11  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	* engines/clearlooks/src/clearlooks_draw_inverted.c:
	More visual fixes.

2008-05-11  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_button), (clearlooks_draw_entry),
	(clearlooks_scale_draw_gradient), (clearlooks_draw_slider):
	Fix some bugs I introduced earlier. (This is not 100% everywhere,
	but should be close enough.)

2008-05-11  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_highlight_and_shade), (clearlooks_draw_button),