@@ -1,6 +1,13 @@
 2008-05-12  Andrea Cimitan  <andrea.cimitan@gmail.com>
 
 	* engines/clearlooks/src/clearlooks_draw.c
+	(clearlooks_draw_spinbutton), (clearlooks_draw_scrollbar_stepper),
+	(clearlooks_draw_scrollbar_slider):
+	Old looking scrollbar sliders & steppers.
+
+2008-05-12  Andrea Cimitan  <andrea.cimitan@gmail.com>
+
+	* engines/clearlooks/src/clearlooks_draw.c
 	(clearlooks_draw_list_view_header):
 	* engines/clearlooks/src/clearlooks_style.c
 	(clearlooks_style_draw_shadow):
